--- a/src/main/webapp/pages/login.xhtml
+++ b/src/main/webapp/pages/login.xhtml
@@ -32,8 +32,8 @@
 
 			<h:panelGrid columns="2">
 				<p:commandButton value="Entrar" update="mensagem"
-					actionListener="#{autenticacaoBean.autenticar}" />
-				<p:commandButton value="Sair" oncomplete="PF('dialogo').hide();" />
+					actionListener="#{loginBean.autenticar}" />
+				
 
 			</h:panelGrid>
 
