--- a/src/main/webapp/pages/principal.xhtml
+++ b/src/main/webapp/pages/principal.xhtml
@@ -34,9 +34,9 @@
 		<p:fieldset legend="Resultados" style="margin-bottom:20px">
 			<h:panelGrid columns="2" cellpadding="5">
 
-				<p:imageCompare leftImage="/resources/images/IMG_8735.JPG"
-					rightImage="/resources/images/IMG_8736.JPG" width="450"
-					height="435" />
+				<p:imageCompare leftImage="/resources/images/captura2.png"
+					rightImage="/resources/images/captura1.png" width="600"
+					height="430" />
 
 				<h:outputText
 					value="The story begins as Don Vito Corleone, the head of a New York Mafia family, oversees his daughter's wedding.
@@ -44,24 +44,29 @@
                 Through Michael's life the nature of the family business becomes clear. The business of the family is just like the head of the family, kind and benevolent to those who give respect,
                 but given to ruthless violence whenever anything stands against the good of the family." />
 
-
-
 			</h:panelGrid>
+
+			<p:separator />
 		</p:fieldset>
 
 
+		<p:panelGrid>	
+			<div align="right">
+				<p:media value="https://www.youtube.com/v/48FXyaf3X7A" width="900"
+					height="500" player="flash" />
+			</div>
+		</p:panelGrid>
+
+
+
 		<center>
-			
-			<h:outputText value="Desenvolvido por: Jonas Costa / Mateus Rose"/>
-		
-				<h:outputText value="Informações de Contato:"/> 
-				
-				<a href="mailto:jonas.costa1987@gmail.com">
-					jonas.costa1987@gmail.com</a> / <a
-					href="mailto:matheusroses@outlook.com">
-					matheusroses@outlook.com</a>
-		
-			
+			<h:outputText value="Desenvolvido por: Jonas Costa / Mateus Rose" />
+
+			<h:outputText value="Informações de Contato:" />
+
+			<a href="mailto:jonas.costa1987@gmail.com">
+				jonas.costa1987@gmail.com</a> / <a
+				href="mailto:matheusroses@outlook.com"> matheusroses@outlook.com</a>
 		</center>
 	</ui:define>
 
